# ChangeLog for x11-drivers/ati-drivers
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/ati-drivers/ChangeLog,v 1.20 2006/02/03 21:15:45 marienz Exp $

  03 Feb 2006; Marien Zwart <marienz@gentoo.org> ati-drivers-8.21.7.ebuild:
  Install in the correct location when modular xorg-server is installed but
  the xorg-x11 meta is not. Add RESTRICT=stricter.

  21 Jan 2006; <anarchy@gentoo.org>
  +files/ati-drivers-8.21.7-linux-2.6.15.patch, ati-drivers-8.21.7.ebuild:
  2.6.15 patch added, small fix for libfglrxdrm.so

*ati-drivers-8.21.7 (21 Jan 2006)

  21 Jan 2006; Luca Barbato <lu_zero@gentoo.org> +ati-drivers-8.21.7.ebuild:
  New version

  21 Jan 2006; <anarchy@gentoo.org> ati-drivers-8.20.8.ebuild:
  corrected missing file for modular X

  11 Jan 2006; Luca Barbato <lu_zero@gentoo.org> ati-drivers-8.20.8.ebuild:
  Fixed bug #113872

  03 Jan 2006; Jory A. Pratt <anarchy@gentoo.org>
  +files/ati-drivers-8.20.8-linux-2.6.15.patch, ati-drivers-8.20.8.ebuild:
  patched 8.20.8 for kernel-2.6.15

  19 Dec 2005; Jory A. Pratt <anarchy@gentoo.org> ati-drivers-8.20.8.ebuild:
  fixed for modular X

*ati-drivers-8.20.8 (11 Dec 2005)

  11 Dec 2005; Luca Barbato <lu_zero@gentoo.org> +ati-drivers-8.20.8.ebuild:
  New release

  06 Dec 2005; Luca Barbato <lu_zero@gentoo.org> ati-drivers-8.19.10.ebuild:
  Minor fixes

*ati-drivers-8.18.8-r2 (03 Dec 2005)

  03 Dec 2005; Luca Barbato <lu_zero@gentoo.org>
  +ati-drivers-8.18.8-r2.ebuild, ati-drivers-8.19.10.ebuild:
  Backport to opengl-update

  16 Nov 2005; Luca Barbato <lu_zero@gentoo.org> ati-drivers-8.19.10.ebuild:
  Fixed the 2.6.14 support and minor changes leading to better modular X support

  15 Nov 2005; Luca Barbato <lu_zero@gentoo.org> ati-drivers-8.19.10.ebuild:
  Patch removed

  15 Nov 2005; Luca Barbato <lu_zero@gentoo.org> ati-drivers-8.19.10.ebuild:
  Extended LIBGL_DRIVERS_PATH support

  14 Nov 2005; Luca Barbato <lu_zero@gentoo.org>