@@ -1,9 +1,9 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 37c0374663d631856896d458d8d7c24d ChangeLog 25483
-RMD160 4713ce0b11146bff5615e0e02a69d5370e243767 ChangeLog 25483
-SHA256 1e1422b78f7f5a1634912793056a9f2676c17b02503dcc0506902f81b1989769 ChangeLog 25483
+MD5 dfd34d042066f174783ba554946200e7 ChangeLog 25671
+RMD160 b3e09c064d2b90b0f1f0316b1098e7a56188a6c7 ChangeLog 25671
+SHA256 6847c6e2f38c2c9fd987e3f69cb6a1adfb5c4541f749289451f58e3f24b67b27 ChangeLog 25671
 MD5 ad343861ae1ccea97bf3bbcdb61ba9e0 ati-drivers-8.14.13-r2.ebuild 7005
 RMD160 fdb66565c4601869a9770d995fee4c055090978f ati-drivers-8.14.13-r2.ebuild 7005
 SHA256 e12b64254b2459337c7e6a9e16ec31add663375d74cfdc78e3b5e489eed5e211 ati-drivers-8.14.13-r2.ebuild 7005
@@ -43,9 +43,9 @@ SHA256 8a6e8daaa409346d18ace02046b4e0e899cb86d6b32fd77dee226d715c16e74a ati-driv
 MD5 fbf3f393a9d60dcb7f425e2fc9ed448e ati-drivers-8.20.8.ebuild 8365
 RMD160 4524c29cc880b18e42bac9a1f1a41412303a9db1 ati-drivers-8.20.8.ebuild 8365
 SHA256 549ad9580ce55f79ad1f14510a3beccf6719d0eace6f46f5510ea43ce6d14532 ati-drivers-8.20.8.ebuild 8365
-MD5 3645bd39afeba42bad868ef2ee7c59ec ati-drivers-8.21.7.ebuild 8569
-RMD160 0ad4425199a44e23b16655d4e28d2e09875f41b3 ati-drivers-8.21.7.ebuild 8569
-SHA256 4c03e6daecc3cd0b7e530fe2ab27c762c84785928c5436016bf81babc9026184 ati-drivers-8.21.7.ebuild 8569
+MD5 86e249208f687933d2822fad29e0e81c ati-drivers-8.21.7.ebuild 8447
+RMD160 14e615b49a299111aa36a0590788f0eff7dbfc69 ati-drivers-8.21.7.ebuild 8447
+SHA256 248daea95d8efba35ce9f852ecd9b5af139fd44ee8a1fdad9e500a453b89ae6c ati-drivers-8.21.7.ebuild 8447
 MD5 e61309d064f12cc623e4d6e78aa82b36 files/09ati 39
 RMD160 2eb917685ae226a6913f00d0247514faf998d92f files/09ati 39
 SHA256 44336cd56c2712a3260a1289c1085f08e4cb61e6a73175eac4a7b3ebabe5011e files/09ati 39
@@ -130,7 +130,7 @@ SHA256 4fbed7030b32bcdc95b70000adbbcb6f1d73092c4a2f20e6cfb737a1b44d6e07 metadata
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2 (GNU/Linux)
 
-iD8DBQFD48gWW78445TWHXcRAhNhAJwIWXAHl/Z6HxKJUpVCrNflIFgWVgCeMuDW
-c/twdWEvIScyfy+0azRcdIg=
-=CL8O
+iD8DBQFD5TEkW78445TWHXcRAnedAJ9eZ2J5MuK5yFX7iffMRsY+2zTqNQCeKjOE
+rn/AC2k5axuSFrG4Ch8UwYg=
+=jIRd
 -----END PGP SIGNATURE-----
