@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/ati-drivers
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/ati-drivers/ChangeLog,v 1.20 2006/02/03 21:15:45 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/ati-drivers/ChangeLog,v 1.21 2006/02/04 22:56:09 marienz Exp $
+
+  04 Feb 2006; Marien Zwart <marienz@gentoo.org> ati-drivers-8.21.7.ebuild:
+  Do not doexe the same file twice (previous commit "fixed" something a second
+  time...). Spotted by Anarchy.
 
   03 Feb 2006; Marien Zwart <marienz@gentoo.org> ati-drivers-8.21.7.ebuild:
   Install in the correct location when modular xorg-server is installed but
